# larue-civic-intel

./: .gitignore  Cargo.toml  LICENSE  README.md  artifact.json  config.example.toml  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: backfill_ipfs.yml  weekly.yml
config/: ci.toml
crates/: README.md
crates/civic_core/: Cargo.toml
crates/civic_core/src/: db.rs  lib.rs  schema.rs  scoring.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/obsidian/: Cargo.toml
crates/obsidian/src/: lib.rs  vault.rs
examples/: meeting.json
ops/systemd/: larue-civic-intel.service  larue-civic-intel.timer
rubric/: README.md  bias_controls.yaml  evidence_rules.yaml  kentucky_constitution_map.yaml  policy_tags.yaml  rubric_config.toml  scoring_rules.yaml  tags.yaml  us_constitution_map.yaml  values_rubric.yaml  weights.yaml
rubric/examples/: example_motion_score.yaml  example_vote_score.yaml
schemas/: Artifact.schema.json  Body.schema.json  Meeting.schema.json  Motion.schema.json  Official.schema.json  README.md  SourceRef.schema.json  Vote.schema.json
tests/: README.md
vault/00_Index/: MOC - Artifacts.md  MOC - Issues.md  MOC - Meetings.md  MOC - Reports.md
vault/Artifacts/: demo-001.md  ky_public_notice:larue.md
vault/Meetings/: meeting-2026-01-08-fiscal.md
vault/Reports/Weekly/: 2026-01-10-scores.md  2026-01-10.md
vault_template/00_Index/: MOC - LaRue County.md
workers/collectors/: ky_public_notice_larue.py  larue_fiscal_court_agendas.py  wayback_backfill.py
workers/parsers/: extract_text.py  parse_meeting_minutes.py  tag_artifacts.py
