[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
civic_core = { path = "../civic_core" }
obsidian = { path = "../obsidian" }

clap = { version = "4", features = ["derive"] }
anyhow = "1"
schemars = "0.8"
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }